--- a/KrausxRGA/UI/wndPONumber.xaml
+++ b/KrausxRGA/UI/wndPONumber.xaml
@@ -381,36 +381,40 @@
 
                             <Border>
                                 <Canvas Height="471">
-                                    <Border Width="790" CornerRadius="10" Canvas.Top="2" BorderBrush="#FF787878" BorderThickness="2,0,2,2" Height="332" >
+                                    <Border Width="790" CornerRadius="10" Canvas.Top="2" BorderBrush="#FF787878" BorderThickness="2,0,2,2" Height="361" >
                                         <Canvas Margin="-10,0,10,0" Name="CanvasConditions" IsEnabled="False">
                                             <Label Name="lblpoints" Height="39" Width="105" Canvas.Left="656" Canvas.Top="75" Visibility="Hidden"></Label>
 
                                             <Canvas  Height="54" Width="493" RenderTransformOrigin="2.093,1.173" Canvas.Left="227" Canvas.Top="12">
-                                                <Label Canvas.Left="2" Canvas.Top="5" Name="lblItemIsNew" Content="Item is New" Style="{StaticResource lblConstant}" Width="167" Height="46" FontSize="30" ></Label>
-                                                <RadioButton Content="Yes" Name="btnBoxNew" Canvas.Left="193" Canvas.Top="6" Height="45" Width="75" FontSize="30" Checked="btnBoxNew_Checked_1"></RadioButton>
-                                                <RadioButton Content="No" Name="btnBoxNotNew" Canvas.Left="293" Canvas.Top="5" Height="46" Width="104" FontSize="30" Checked="btnBoxNotNew_Checked_1" ></RadioButton>
+                                                <Label Canvas.Left="8" Canvas.Top="-9" Name="lblItemIsNew" Content="Item is New" Style="{StaticResource lblConstant}" Width="167" Height="46" FontSize="30" ></Label>
+                                                <RadioButton Content="Yes" Name="btnBoxNew" Canvas.Left="199" Height="45" Width="75" FontSize="30" Checked="btnBoxNew_Checked_1" Canvas.Top="-8"/>
+                                                <RadioButton Content="No" Name="btnBoxNotNew" Canvas.Left="299" Canvas.Top="-9" Height="46" Width="104" FontSize="30" Checked="btnBoxNotNew_Checked_1" ></RadioButton>
                                             </Canvas>
                                             <Canvas>
-                                                <Label Canvas.Left="117" Canvas.Top="253" Name="lblDefectontea" Content="Defect in Transite" Style="{StaticResource lblConstant}" Width="284" Height="43" FontSize="30" ></Label>
-                                                <RadioButton Content="Yes" Name="btntransiteYes" Canvas.Left="418" Canvas.Top="252" Height="44" Width="84" FontSize="30" Checked="btntransiteYes_Checked_1" IsEnabled="False"></RadioButton>
-                                                <RadioButton Content="No" Canvas.Left="524" Name="btntransiteNo" Canvas.Top="252" Height="42" Width="79" FontSize="30" Checked="btntransiteNo_Checked" IsEnabled="False" ></RadioButton>
+                                                <Label Canvas.Left="123" Canvas.Top="197" Name="lblDefectontea" Content="Defect in Transite" Style="{StaticResource lblConstant}" Width="284" Height="43" FontSize="30" ></Label>
+                                                <RadioButton Content="Yes" Name="btntransiteYes" Canvas.Left="424" Canvas.Top="196" Height="44" Width="84" FontSize="30" Checked="btntransiteYes_Checked_1" IsEnabled="False"></RadioButton>
+                                                <RadioButton Content="No" Canvas.Left="530" Name="btntransiteNo" Canvas.Top="196" Height="42" Width="79" FontSize="30" Checked="btntransiteNo_Checked" IsEnabled="False" ></RadioButton>
                                             </Canvas>
                                             <Canvas>
-                                                <Label Canvas.Left="158" Name="lblInstalled" Canvas.Top="70" Content="Installed" Style="{StaticResource lblConstant}" Width="241" Height="47" FontSize="30" ></Label>
-                                                <RadioButton Content="Yes" Canvas.Left="418" Canvas.Top="76" Name="btnInstalledYes" Height="45" Width="84" FontSize="30" Checked="btnInstalledYes_Checked_1"></RadioButton>
-                                                <RadioButton Content="No" Canvas.Left="523" Canvas.Top="77" Name="btnInstalledNo" Height="44" Width="84" FontSize="30" Checked="btnInstalledNo_Checked_1" ></RadioButton>
+                                                <Label Canvas.Left="164" Name="lblInstalled" Canvas.Top="46" Content="Installed" Style="{StaticResource lblConstant}" Width="241" Height="47" FontSize="30" ></Label>
+                                                <RadioButton Content="Yes" Canvas.Left="424" Canvas.Top="52" Name="btnInstalledYes" Height="45" Width="84" FontSize="30" Checked="btnInstalledYes_Checked_1"></RadioButton>
+                                                <RadioButton Content="No" Canvas.Left="529" Canvas.Top="53" Name="btnInstalledNo" Height="44" Width="84" FontSize="30" Checked="btnInstalledNo_Checked_1" ></RadioButton>
                                             </Canvas>
                                             <Canvas>
-                                                <Label Canvas.Left="6" Name="lblStatus" Canvas.Top="132" Content="Chip/Bended/Scratch/Broken" Style="{StaticResource lblConstant}" Width="396" Height="46" FontSize="30" ></Label>
-                                                <RadioButton Content="Yes"  Canvas.Left="419" Canvas.Top="133" Name="btnStatusYes" Height="49" Width="84" FontSize="30" Checked="btnStatusYes_Checked" ></RadioButton>
-                                                <RadioButton Content="No"  Canvas.Left="523" Canvas.Top="135" Name="btnStatusNo" Height="47" Width="84" FontSize="30" Checked="btnStatusNo_Checked"></RadioButton>
+                                                <Label Canvas.Left="14" Name="lblStatus" Canvas.Top="96" Content="Chip/Bended/Scratch/Broken" Style="{StaticResource lblConstant}" Width="396" Height="46" FontSize="30" ></Label>
+                                                <RadioButton Content="Yes"  Canvas.Left="427" Canvas.Top="97" Name="btnStatusYes" Height="49" Width="84" FontSize="30" Checked="btnStatusYes_Checked" ></RadioButton>
+                                                <RadioButton Content="No"  Canvas.Left="531" Canvas.Top="99" Name="btnStatusNo" Height="47" Width="84" FontSize="30" Checked="btnStatusNo_Checked"></RadioButton>
                                             </Canvas>
                                             <Canvas>
-                                                <Label Canvas.Left="34" Canvas.Top="187" Name="lblManufacturer" Content="Manufacturer Defective" Style="{StaticResource lblConstant}" Width="372" Height="48" FontSize="30" ></Label>
-                                                <RadioButton Content="Yes" Canvas.Left="420" IsEnabled="False" Canvas.Top="191" Name="btnManufacturerYes" Height="46" Width="84" FontSize="30" Checked="btnManufacturerYes_Checked"></RadioButton>
-                                                <RadioButton Content="No" Canvas.Left="523" Canvas.Top="191" IsEnabled="False" Name="btnManufacturerNo" Height="48" Width="98" FontSize="30" Checked="btnManufacturerNo_Checked"></RadioButton>
+                                                <Label Canvas.Left="40" Canvas.Top="143" Name="lblManufacturer" Content="Manufacturer Defective" Style="{StaticResource lblConstant}" Width="372" Height="48" FontSize="30" ></Label>
+                                                <RadioButton Content="Yes" Canvas.Left="426" IsEnabled="False" Canvas.Top="147" Name="btnManufacturerYes" Height="46" Width="84" FontSize="30" Checked="btnManufacturerYes_Checked"></RadioButton>
+                                                <RadioButton Content="No" Canvas.Left="529" Canvas.Top="147" IsEnabled="False" Name="btnManufacturerNo" Height="48" Width="98" FontSize="30" Checked="btnManufacturerNo_Checked"></RadioButton>
                                             </Canvas>
-                                            <Button Content="Done" Name="btnAdd" Canvas.Left="642" Canvas.Top="261" Width="119" Height="44" FontSize="20" Click="btnAdd_Click" ></Button>
+                                            <Button Content="Done" Name="btnAdd" Canvas.Left="640" Canvas.Top="303" Width="119" Height="44" FontSize="20" Click="btnAdd_Click" ></Button>
+                                            <ComboBox Canvas.Left="212" Canvas.Top="258" Width="392" Height="45" x:Name="cmbSkuReasons" ItemsSource="{Binding}" DisplayMemberPath="Reason1" SelectedValuePath="ReasonID" FontSize="25" SelectedIndex="0" SelectedValue="0" SelectionChanged="cmbSkuReasons_SelectionChanged_1"/>
+                                            <TextBox Height="46" Canvas.Left="212" TextWrapping="Wrap" Text="" Canvas.Top="306" Width="392" x:Name="txtskuReasons" FontSize="25" KeyDown="txtskuReasons_KeyDown_1"/>
+                                            <Label Content="Reasons" Canvas.Left="58" FontSize="30" Canvas.Top="253" Width="124" Height="53"/>
+
                                         </Canvas>
                                         <!--<Canvas x:Name="cvCheckboxHolder" Margin="-10,0,10,0">
                                             <Border Height="45" Width="789" Background="#B2111111" Canvas.Top="1" Canvas.Left="8">
@@ -531,7 +535,7 @@
                                             </ComboBox>
                                         </Canvas>
                                     </Border>-->
-                                    <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="392" Height="56" Width="234" Canvas.Left="556" >
+                                    <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="410" Height="56" Width="234" Canvas.Left="556" >
                                         <StackPanel Orientation="Horizontal">
                                             <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoSave.png" MouseDown="btnHomeDone_Click" Width="59"/>
                                             <Button Style="{StaticResource ToolBarButtonBaseStyle}"
@@ -541,7 +545,7 @@
                                         </StackPanel>
                                     </Border>
 
-                                    <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="394" Height="56" Width="218" Canvas.Left="8" >
+                                    <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="412" Height="56" Width="218" Canvas.Left="6" >
                                         <StackPanel Orientation="Horizontal">
                                             <Image Style="{StaticResource btnImage}"  MouseDown="btnback_Click" Source="/KrausRGA;component/Images/bac.png" Width="36"/>
                                             <Button Style="{StaticResource ToolBarButtonBaseStyle}"
@@ -555,7 +559,7 @@
                             </Border>
                         </StackPanel>
                     </Canvas>
-                    <Border BorderThickness="1" Height="43" Canvas.Top="1139" Width="781" Canvas.Left="6">
+                    <Border BorderThickness="1" Height="43" Canvas.Top="1161" Width="781" Canvas.Left="8">
                         <Canvas Margin="0,1,0,-1">
                             <Border x:Name="bdrMsg" Visibility="Hidden" BorderThickness="1" Height="27" Canvas.Left="0" Width="779" Background="#E1007ACC" Canvas.Top="3">
                                 <Border.Style >
