--- a/KrausxRGA/UI/wndSrNumberInfo.xaml
+++ b/KrausxRGA/UI/wndSrNumberInfo.xaml
@@ -51,7 +51,7 @@
                                             </ComboBox>
 
                                             <Label x:Name="lblcRMADecision" Content="Decision : " Style="{StaticResource lblConstant}" Canvas.Top="139" Width="97" Canvas.Left="78"/>
-                                            <ComboBox x:Name="cmbRMADecision" Height="45" Width="252" Canvas.Left="10" Canvas.Top="170" Style="{StaticResource combo}" IsEnabled="False"
+                                            <ComboBox x:Name="cmbRMADecision" Height="45" Width="252" Canvas.Left="10" Canvas.Top="170" Style="{StaticResource combo}" 
         										ItemsSource="{Binding RAMStatus}" SelectedValuePath="ID" DisplayMemberPath="Status" SelectedIndex="0" SelectedValue="-1" Foreground="#FF55BFB6" BorderBrush="#FF292929" >
                                                 <ComboBox.Background>
                                                     <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
@@ -197,8 +197,8 @@
         										Width="150" >
                                                 <DataGridTemplateColumn.CellTemplate>
                                                     <DataTemplate >
-                                                        <ScrollViewer x:Name="svScrollImages" Width="250" VerticalScrollBarVisibility="Disabled" HorizontalScrollBarVisibility="Auto" CanContentScroll="True" Height="70">
-                                                            <ContentControl MouseLeftButtonDown="ContentControl_MouseLeftButtonDown">
+                                                        <ScrollViewer x:Name="svScrollImages" Width="150" VerticalScrollBarVisibility="Disabled" HorizontalScrollBarVisibility="Auto" CanContentScroll="True" Height="70">
+                                                            <ContentControl MouseLeftButtonDown="ContentControl_MouseLeftButtonDown" MouseDoubleClick="ContentControl_MouseDoubleClick_1">
                                                                 <StackPanel x:Name="spProductImages" Background="#FFA4A4A4" Orientation="Horizontal" />
                                                             </ContentControl>
                                                         </ScrollViewer>
